--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🇨🇴 EXPLORA COLOMBIA</h1>
+            <h1>EXPLORA COLOMBIA</h1>
             <p>Manual de Identidad Visual y Marca</p>
         </div>
 
@@ -806,6 +806,7 @@
     </script>
 </body>
 </html>
+
 
 
 
