--- a/manual.html
+++ b/manual.html
@@ -372,7 +372,7 @@
   </div>
 
   <header class="hero">
-    <div class="logo-hero">🇨🇴</div>
+    <div class="logo-hero"></div>
     <h1>📖 Manual de Usuario — Explora Colombia</h1>
     <p>La plataforma digital que conecta viajeros con los destinos más auténticos de Colombia</p>
   </header>
