--- a/manual.html
+++ b/manual.html
@@ -372,8 +372,8 @@
   </div>
 
   <header class="hero">
-    <div class="logo-hero"></div>
-    <h1>📖 Manual de Usuario — Explora Colombia</h1>
+    <div class="logo-hero">📖</div>
+    <h1>Manual de Usuario — Explora Colombia</h1>
     <p>La plataforma digital que conecta viajeros con los destinos más auténticos de Colombia</p>
   </header>
 
